# IORacer

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
demos/demo_1/: CMakeLists.txt  Readme.md
demos/demo_1/src/: CMakeLists.txt  IORacer.cpp  IORacer.h  main.cpp  tmp.cpp
demos/demo_1/src/Context/: Context.cpp  Context.h  ContextCamera.cpp  ContextCamera.h  ContextCameraView.cpp  ContextCameraView.h  ContextEvents.cpp  ContextEvents.h  ContextLogic.cpp  ContextLogic.h  ContextManager.cpp  ContextManager.h  ContextScene.cpp  ContextScene.h  ContextView.cpp  ContextView.h
demos/demo_1/src/Event/: Event.cpp  Event.h  EventBuffer.cpp  EventBuffer.h  EventClient.cpp  EventClient.h  EventManager.cpp  EventManager.h  EventServer.cpp  EventServer.h  EventTypes.h  Events.h  ExternalEvents.cpp  ExternalEvents.h
demos/demo_1/src/View/: MainView.cpp  MainView.h  RendererHandler.cpp  RendererHandler.h
demos/demo_1/src/config/: config_default.h
demos/demo_3/: CMakeLists.txt  Readme.md
demos/demo_3/src/: .main.cpp.swp  Area.h  CMakeLists.txt  Car.cpp  Car.h  CheckPoint.cpp  CheckPoint.h  CheckPointManager.h  CheckPointParser.h  ContactListener.cpp  ContactListener.h  Entity.h  HUD.cpp  HUD.h  Map.cpp  Map.h  MathUtil.cpp  MathUtil.h  Race.cpp  Race.cpp.orig  Race.h  Race.h.orig  Race.hpp  RectangleArea.cpp  RectangleArea.h  RectangleParams.h  main.cpp
demos/demo_3/src/CheckPoint/: CheckPoint.cpp  CheckPoint.h  CheckPointManager.cpp  CheckPointManager.h  CheckPointParser.cpp  CheckPointParser.h
docs/: Iteration1.dox  (+4 more)
src/: Area.h  CMakeLists.txt  ContactListener.cpp  ContactListener.h  Entity.h  HUD.cpp  HUD.h  MainPage.dox  Map.cpp  Map.h  MathUtil.cpp  MathUtil.h  RectangleArea.cpp  RectangleArea.h  main.cpp  main.cpp.orig
src/Activity/: Activity.cpp  Activity.h  ActivityCommon.h  ActivityManager.cpp  ActivityManager.h
src/CheckPoint/: CheckPoint.cpp  CheckPoint.h  CheckPointManager.cpp  CheckPointManager.h  CheckPointObserver.h  CheckPointParser.cpp  CheckPointParser.h  TimeManager.cpp  TimeManager.h
src/Entity/: Button.cpp  Button.h  ButtonManager.cpp  ButtonManager.h  Container.cpp  Container.h  Drawable.h  IntegerIndicator.cpp  IntegerIndicator.h  Movable.h  Text.cpp  Text.h  TimeIndicator.cpp  TimeIndicator.h  Updatable.h
src/Entity/ButtonState/: ButtonState.h  ButtonStateHold.cpp  ButtonStateHold.h  ButtonStateReleased.cpp  ButtonStateReleased.h  ButtonStateType.h
src/Events/: Event.cpp  Event.h  UIEvent.cpp  UIEvent.h
src/Game/: Vehicle.cpp  Vehicle.h
src/Game/CheckPoint/: CheckPointObserver.h  TimeManager.cpp  TimeManager.h
src/Graphics/: GraphicsCommon.h  Renderer.cpp  Renderer.h  ViewportConst.h  Window.cpp  Window.h
src/Graphics/Texture/: Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/Graphics/UI/: UI.cpp  UI.h  UIBox.cpp  UIBox.h  UIColorConstants.h  UIElement.cpp  UIElement.h  UIMinimap.cpp  UIMinimap.h  UITextBox.cpp  UITextBox.h
src/Interfaces/: Controllable.h  Drawable.h  Movable.h  Rotatable.h  Scalable.h  Trackable.h  Updatable.h
src/Managers/: ActivityManager.cpp  ActivityManager.h  CarComponentManager.cpp  CarComponentManager.h  CheckPointManager.cpp  CheckPointManager.h  Managers.h  MapManager.cpp  MapManager.h  ObjectManager.cpp  ObjectManager.h  PlayerManager.cpp  PlayerManager.h  TextureManager.cpp  TextureManager.h
src/Maps/: CheckpointPosition.h  InitialPosition.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  StartPosition.h
src/Model/: GameData.cpp.depr  GameData.h.depr
src/Module/: Game.cpp.depr  Game.h.depr  Menu.cpp  Menu.cpp.orig  Menu.h  Menu.h.orig  Module.h  Race.cpp  Race.cpp.orig  Race.h  Race.h.orig  Workshop.cpp  Workshop.h
src/Modules/: Gameplay.cpp  Gameplay.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  Module.h  NewPlayer.cpp  NewPlayer.h  NewRace.cpp  NewRace.h  PlayerSelector.cpp  PlayerSelector.h  Race.cpp  Race.h  Splash.cpp  Splash.h  Workshop.cpp  Workshop.h
src/Object/: Box.cpp  Box.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  TruckTire.cpp  TruckTire.h
src/Objects/: Box.cpp  Box.h  BoxObj.cpp  BoxObj.h  Object.cpp  Object.h  ObjectDesc.h  ObjectManager.cpp  ObjectManager.h  Tire.cpp  Tire.h  TruckTire.cpp  TruckTire.h  VehicleObject.cpp  VehicleObject.h  VisualObject.cpp  VisualObject.h
src/Objects/GameObjects/: ObjectTypeE.cpp  ObjectTypeE.h  ObjectTypes.h
src/Scene/: Camera.cpp  Camera.h  Player.cpp  Player.h  Scene.cpp  Scene.h
src/Textures/: Texture.cpp  TextureManager.cpp  TextureManager.h
src/Tools/: Area.h  ComponentCategory.cpp  ComponentCategory.h  ContactListener.cpp  ContactListener.h  Entity.h  HUD.cpp  HUD.h  Map.cpp  Map.h  MathUtil.cpp  RectangleArea.cpp  RectangleArea.h  RectangleParams.h  TextureManager.cpp  TextureManager.h
src/Utils/: Fonts.cpp  Fonts.h  RealVec.cpp  RealVec.h
src/Vehicle/: Car.cpp.depr  Car.h.depr  CarParams.h  Tire.cpp  Tire.h  Tire.h.orig  TireControlE.h  TirePositionE.h  Vehicle.cpp  Vehicle.cpp.orig  Vehicle.h  Vehicle.h.orig
(+72 files in other folders)
